# oook

./: CMakeLists.txt  author.cpp  author.hpp  authortable.cpp  authortable.hpp  book.cpp  book.hpp  booktable.cpp  booktable.hpp  config.hpp  config.ui  configdialog.cpp  configdialog.hpp  configparser.cpp  configparser.hpp  data.cpp  data.hpp  filesystemutils.cpp  filesystemutils.hpp  format.cpp  format.hpp  installer.cpp  installer.hpp  metadata.cpp  metadata.hpp  metadatatable.cpp  metadatatable.hpp  opds.kdev4  publisher.cpp  publisher.hpp  publishertable.cpp  publishertable.hpp  renderer.cpp  renderer.hpp  search.cpp  search.hpp  serie.cpp  serie.hpp  serietable.cpp  serietable.hpp  (+8 more)
template/: book.tpl.html  bower.json  config.tpl.html  header.tpl.html  item.book.tpl.html  item.tpl.html  link.download.tpl.html  pagination.first.tpl.html  pagination.hellip.tpl.html  pagination.last.tpl.html  pagination.link.tpl.html  pagination.next.tpl.html  pagination.prev.tpl.html  pagination.tpl.html  section.tpl.html
template/css/: style.css
